--- a/todo/src/main/resources/templates/index.html
+++ b/todo/src/main/resources/templates/index.html
@@ -8,11 +8,12 @@
 <link href="../../webjars/bootstrap/4.0.0/css/bootstrap.min.css"
 	rel="stylesheet">
 <link href="../../standard.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
 	<div class="container">
 		<div th:replace="fragments/navbar"></div>
-		<h1>Welcome to Our To-Do List Site!</h1>
+		<h2>Todo List</h2>
 		<div class="row">
 			<div th:each="do:${todoList}">
 				<div class="col-sm-8">
@@ -24,7 +25,6 @@
 								<p class="card-text" th:text="${do.description}"></p>
 							</div>
 							<div class="card-body">
-								<strong><h5 class="card-text" th:text="${do.user}" /></h5></strong>
 								<p class="card-text" th:text="${do.status}" /></p>
 
 								<div class="btn-group">
@@ -55,5 +55,9 @@
 		</div>
 	</div>
 	<div th:replace="/fragments/styling :: body-links"></div>
+
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
