--- a/todo/src/main/resources/templates/result.html
+++ b/todo/src/main/resources/templates/result.html
@@ -7,6 +7,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link href="../../webjars/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 	<link href="../../standard.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
 	<div class="container text-dark">
@@ -20,7 +21,7 @@
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h3 th:text="${todo.title}"></h3>
-						<strong><p th:text="${todo.user}" /></p></strong>
+
 					</div>
 					<div class="panel-body">
 						<h5 th:text="${todo.description}"></h5>
