--- a/todo/src/main/resources/templates/registration.html
+++ b/todo/src/main/resources/templates/registration.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <div class="container">
-    	<div th:replace="fragments/navbar"></div>
+    	<br/>
+		<h3 style="align:center">Sign Up!</h3>
+		<br/>
 	        <div th:if="${successMessage}">
 	            <h2><span class="text-success" th:utext="${successMessage}">Sign Up</span></h2>
         	</div>		
