--- a/todo/src/main/resources/templates/login.html
+++ b/todo/src/main/resources/templates/login.html
@@ -4,19 +4,30 @@
 <head>
     <title>Log in</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+     -->
 </head>
 <body>
     <div class="container">
-        <h2>Welcome!</h2> 
+        <br>
+        <h3>Log In</h3>
         <form th:action="@{/login}" method="post"><br/>
             <input type="text" id="username" name="username" th:placeholder="Username" class="form-control"/> <br/>
             <input type="password" th:placeholder="Password" id="password" name="password" class="form-control"/> <br/>
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="remember-me-option" name="remember-me-option">
+                <label class="form-check-label" for="remember-me-option">Remember me ?</label>
+            </div>
             <div align="center" th:if="${param.error}">
                 <h4 style="color: red">Login unsuccessful.</h4>
             </div>
             <button class="btn btn-md btn-success btn-block" name="Submit" value="Login" type="Submit">Log in</button> 
-        </form> 
-        <a th:href="@{/signup}"><button class="btn btn-md btn-primary btn-block">Register for a free account</button></a>     
+        </form>
+        <a  th:href="@{/signup}"><button class="btn btn-md btn-primary btn-block">Register for an account</button></a>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
