--- a/todo/src/main/resources/static/standard.css
+++ b/todo/src/main/resources/static/standard.css
@@ -3,7 +3,7 @@ body, html {
   width: 100%;
 }
 .container {
-  background-image: url('/img/blla.jpg');
+  background-image: url('/img/todo.jpg');
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
