--- a/todo/src/main/resources/templates/fragments/navbaradmin.html
+++ b/todo/src/main/resources/templates/fragments/navbaradmin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <title>Blog Project</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -12,8 +12,17 @@
 <nav class="navbar navbar-light bg-transparent">
     <form class="form-inline">
         <a th:href="@{/admin}"><button class="btn btn-outline-primary" type="button"><strong>Back to Home Page</strong></button></a>
-        <a th:href="@{/admin/new}"><button class="btn btn-outline-success" type="button"><strong>Add a New User</strong></button></a>
+        <!--<a th:href="@{/admin/new}"><button class="btn btn-outline-success" type="button"><strong>Add a New User</strong></button></a>
+    -->
     </form>
+
+    </form>
+    <div class="col-md-6" id="second" style="float:right;">
+        <form class="form-inline" form-method="post" th:action="@{/logout}">
+            <!--        <button sec:authorize="isAnonymous()"  th:href="@{~/signup}" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">Signup</button> -->
+            <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">Logout</button>
+
+        </form>
 </nav>
 
 <script src="../../webjars/bootstrap/4.0.0/js/bootstrap.min.js"></script>
