--- a/todo/src/main/resources/templates/admin.html
+++ b/todo/src/main/resources/templates/admin.html
@@ -13,19 +13,20 @@
 <body>
 <div class="container">
     <div th:replace="fragments/navbaradmin"></div>
-    <h2>Todo List</h2>
+    <h2>User List</h2>
     <div class="row">
         <div th:each="do:${userList}">
             <div class="col-sm-8">
                 <div class="row">
                     <div class="card text-center bg-light mb-3 text-truncate"
                          style="width: 25rem;">
-                        <div class="card-header">
-                            <h4 class="card-title" th:text="${do.firstName}"></h4>
-                            <p class="card-text" th:text="${do.username}"></p>
+                        <div class="card-header" style="background-color:#ADADE6;">
+                            <h3 class="card-title" th:text="${do.firstName}"></h3>
+                            <h5 class="card-text" th:text="${do.lastName}"></h5>
                         </div>
-                        <div class="card-body">
-                            <p class="card-text" th:text="${do.email}" /></p>
+                        <div class="card-body" style="background-color:#C3C3E9;">
+                            <h5 class="card-text" th:text="${do.username}" /></h5>
+                            <h5 class="card-text" th:text="${do.email}" /></h5>
 
                             <div class="btn-group">
                                 <a th:href="@{'/admin/update/{id}'(id=${do.id})}">
