--- a/todo/src/main/resources/templates/fragments/taskForm.html
+++ b/todo/src/main/resources/templates/fragments/taskForm.html
@@ -22,7 +22,7 @@
  		</div>
 
  		<div class="form-group">
- 			<label for="creator">Creator</label>
+ 			<label for="creator">User</label>
  			<input type="text" class="form-control" placeholder="Your Name Here..." th:field="*{user}" />
  		</div>
 
